Addition auth Сhanged the location of the authorization form

--- a/LowadiBot/LowadiBot.csproj
+++ b/LowadiBot/LowadiBot.csproj
@@ -61,6 +61,7 @@
       <HintPath>..\packages\PropertyChanged.Fody.3.4.1\lib\net40\PropertyChanged.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
@@ -118,6 +119,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Lang.en.resx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Account.cs" />
+    <Compile Include="Others\ExtensionsMethods.cs" />
     <Compile Include="Others\Files.cs" />
     <Compile Include="Others\JsonConvert.cs" />
     <Compile Include="Properties\Annotations.cs" />
@@ -160,6 +163,7 @@
     <EmbeddedResource Include="Langs\Lang.en.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Lang.en.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Langs\Lang.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -186,6 +190,7 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Resources\" />
     <Folder Include="Services\" />
     <Folder Include="Views\Themes\" />
     <Folder Include="Views\UserControls\" />
@@ -214,12 +219,10 @@
     <Resource Include="Views\Pages\fourrage.png" />
     <Resource Include="Views\Windows\ru.png" />
     <Resource Include="FodyWeavers.xml" />
-    <None Include="Resources\Image1.bmp" />
     <Resource Include="Assets\image\lang\en.png" />
     <Resource Include="Assets\image\lang\ru.png" />
     <Content Include="Assets\image\menu.png" />
     <Content Include="Assets\svg\close.svg" />
-    <Resource Include="Views\Windows\favicon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.6.2\build\Fody.targets" Condition="Exists('..\packages\Fody.6.6.2\build\Fody.targets')" />
