--- a/LowadiBot/LowadiBot.csproj
+++ b/LowadiBot/LowadiBot.csproj
@@ -50,8 +50,8 @@
       <HintPath>..\packages\DevExpressMvvm.21.1.5\lib\net452\DevExpress.Mvvm.UI.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Lowadi, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\LowadiApi\Lowadi\bin\Debug\Lowadi.dll</HintPath>
+    <Reference Include="Lowadi, Version=1.0.0.1, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\LowadiApi\Lowadi\bin\Release\Lowadi.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -63,6 +63,9 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Text.Encoding.CodePages, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\..\LowadiApi\Lowadi\bin\Release\System.Text.Encoding.CodePages.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -79,8 +82,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Views\Windows\ManagerAccount.xaml.cs">
-      <DependentUpon>ManagerAccount.xaml</DependentUpon>
+    <Compile Include="ViewModels\Windows\ManagerAccountWindowViewModel.cs" />
+    <Compile Include="Views\Windows\ManagerAccountWindow.xaml.cs">
+      <DependentUpon>ManagerAccountWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="Icon.xaml">
       <SubType>Designer</SubType>
@@ -152,7 +156,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\Windows\ManagerAccount.xaml" />
+    <Page Include="Views\Windows\ManagerAccountWindow.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
